--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700|Open+Sans:300,300i,400,400i,700,700i" rel="stylesheet">
-  <link href="https://db.onlinewebfonts.com/c/0b6ede94891dc967aff38e9ca2419bc6?family=Minercraftory" rel="stylesheet" type="text/css"/>
+  <link href="lib/fonts.css" rel="stylesheet" type="text/css"/>
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
