Corrección de video en mobile

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
   <!--==========================
     Inicio Section
   ============================-->
+
   <section id="intro">
     <div class="overlay">
-		<video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+		<video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" id="video-overlay">
 			<source src="img/HEADER_WEB.mp4" type="video/mp4">
 		</video>
 		<div class="intro-text">
@@ -89,7 +90,7 @@
               <div class="wow fadeInLeft">
                 <h2>Potrero: ¿Qué es Potrero Digital?</h2>
                 <h3>Potrero Digital es una Red de Escuelas de oficios digitales orientada a la integración social, la capacitación y la obtención de trabajo para personas mayores de 16 años, a través de la tecnología.</h3>
-                <p>El proyecto está pensado como una usina de generación de herramientas digitales orientadas a personas que viven en zonas con escasos niveles de acceso laboral y aprendizaje formal. Nuestro objetivo es formar una red de escuelas de oficios digitales, que favorezcan la inserción laboral mediante la formación en nuevas tecnologías a personas con bajos recursos. Gracias a nuestro esfuerzo, logramos producir un cambio cultural en las comunidades en las que trabajamos: de los oficios manuales a los digitales, como posibilidades para la generación de empleo y el desarrollo de las comunidades.</p>
+                <p>El proyecto está pensado como una usina de generación de herramientas digitales orientadas a personas que viven en zonas con escasos niveles de acceso laboral y aprendizaje formal. Nuestro objetivo es formar una red de escuelas de oficios digitales, que favorezcan la inserción laboral mediante la formación en oficios digitales. Gracias a nuestro esfuerzo, logramos producir un cambio cultural en las comunidades en las que trabajamos: de los oficios manuales a los digitales, como posibilidades para la generación de empleo y el desarrollo de las comunidades.</p>
 				<p><font size="2">Equipo Potrero Digital: Juan José Bertamoni: Director Ejecutivo, Fabián Hamed: Coordinador Técnico Operativo, Gabriela De Simone y Mariana Coronel: Coordinadoras de Alumnos y Celia Cisneros: Asistente General. El equipo docente está compuesto por: Demian Neidfeld y Nahuel Gallo en Marketing Digital, Luciano Menez y Leandro Garrido en Programación. Andrea Arfini en Inglés Digital y Santiago Recondo en Habilidades Interpersonales. Facilitadores Picadito Digital: Sergio Ponce y Hernán Peralta</font></p>
               </div>
             </div>
@@ -147,7 +148,7 @@
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="ion-paper-airplane"></i></div>
-              <h4 class="title"><a href="">Necesidad de obtener ingresos</a></h4>
+              <h4 class="title"><a href="">Trabajar en el mundo digital</a></h4>
               <p class="description">Ya sea a través de proyectos o emprendimientos propios, mediante la prestación de servicios o la búsqueda de empleo en empresas de tecnología o de la denominada economía digital</p>
             </div>
           </div>
@@ -156,7 +157,7 @@
             <div class="box wow fadeInRight">
               <div class="icon"><i class="ion-compose"></i></div>
               <h4 class="title"><a href="">Inscripción</a></h4>
-              <p class="description">Completar formulario de inscripción y estar comprendido en las condiciones de la Beca de Honor que se otorga a cada alumno ( según desempeño y de renovación cuatrimestral)</p>
+              <p class="description">Completar formulario de inscripción y estar comprendido en las condiciones de la Beca de Honor que se otorga a cada alumno (según desempeño y de renovación cuatrimestral)</p>
             </div>
           </div>
 		  
