--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="gallery-item wow fadeInUp">
-              <a href="img/gallery/gallery-1.jpg" class="gallery-popup">
-                <img src="img/gallery/gallery-1.jpg" alt="">
+              <a href="img/gallery/homero1.jpg" class="gallery-popup">
+                <img src="img/gallery/homero1.jpg" alt="">
               </a>
             </div>
           </div>
