--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link href="lib/animate/animate.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style2.css" rel="stylesheet">
 
 </head>
 
@@ -68,9 +68,15 @@
 			<source src="img/HEADER_WEB.mp4" type="video/mp4">
 		</video>
 		<div class="intro-text">
-		  <h2>Construyendo futuro</h2>
+		  <h2>Potrero 100% virtual</h2>
 		  <p>Red de Escuelas de oficios digitales orientada a la integración social</p>
-		  <a href="#advanced-features" class="btn-get-started scrollto">Conocenos</a>
+      <p>Cursos 100% virtuales para que más personas se capaciten y se inserten en el mundo laboral</p>
+
+
+
+
+
+		  <a href="#faqcursos" class="btn-get-started scrollto">Ver más</a>
 		</div>
 	</div>
   </section><!-- #Inicio -->
@@ -113,6 +119,171 @@
         </div>
       </div>
     </section><!-- #Potrero Digital -->
+
+    <section id="faqcursos">
+      <div class="container">
+
+        <div class="section-header">
+          <h3 class="section-title">Potrero 100% Virtual</h3>
+          <h4 class="section-title">Inscribite haciendo click <a target="_blank" href="https://forms.gle/EsM2T6m17RZfTZZU9"> acá</a></h4>          
+          <span class="section-divider"></span>
+        </div>
+
+        <ul id="faqcursos-list" class="wow fadeInUp">
+          <li>
+            <a data-toggle="collapse" class="collapsed" href="#faqcursos1">Programación Front-End <i class="ion-android-remove"></i></a>
+            <div id="faqcursos1" class="collapse" data-parent="#faqcursos-list">
+			  <p>
+
+          <h3>CURSO ON LINE: Programación Web | Front End Developer<h3>
+          <h4>Fecha de inicio: Lunes 20 de Abril. 18 hs.</h4>
+
+          <p>Aprendé a desarrollar un sitio web de manera profesional y atractiva.<br/>
+          En este curso los participantes recibirán asistencia técnica personalizada para la
+          creación de un sitio y/o aplicación web.<br/>
+          12 clases on line a través de plataforma WebEX Meeting (duración total por participante: 36 horas).<br/>
+          Curso modalidad taller.</p>
+
+        </p>
+			  <h4>Temario y actividades:</h4>
+			  <p>
+          Lenguajes HTML - CSS – Github. Se aprenderá a desarrollar todas las
+          funcionalidades para las diferentes secciones de un sitio o aplicación web.
+          Desarrollo de slider, menú flotante, menú desplegable, etc. Con posibles
+          aplicaciones a: porfolio de dibujos, imágenes, blog personal, sitio web para un
+          emprendimiento personal, blog de noticias, otros fines posibles. Se enviarán
+          actividades y trabajos prácticos semanales de realización obligatoria para el
+          seguimiento de la cursada.
+        </p>
+            </div>
+          </li>
+
+          <li>
+            <a data-toggle="collapse" href="#faqcursos2" class="collapsed">Emprendedorismo<i class="ion-android-remove"></i></a>
+            <div id="faqcursos2" class="collapse" data-parent="#faqcursos-list">
+			  <p>
+
+          <h3>CURSO ON LINE: Emprendedorismo y Plan de Negocios<h3>
+          <h4>Fecha de inicio:  Jueves 16 de Abril. 16 hs.</h4>
+
+          <p>De la idea de negocios a la acción de emprender | Aprendé a armar tu plan de negocios paso a paso<br/>
+          En este curso a los participantes se les hará un seguimiento personalizado para la formulación de un Plan de Negocios (grupal o individual).<br/>
+            12 clases on line a través de plataforma WebEX Meeting (duración total por participante: 36 horas).<br/>
+            Curso modalidad taller.</p>
+
+        </p>
+			  <h4>Temario y actividades:</h4>
+			  <p>
+          Características de la cultura emprendedora. Qué es una empresa, que es un
+          emprendedor?: Autoevaluación de aptitudes emprendedoras. Identificación de
+          oportunidades y su relación con las habilidades y recursos personales. Modelo
+          Canvas y propuesta de valor. ¿Qué es y para qué sirve un Plan de Negocios?
+          Documento del Plan de Negocios y sus componentes. Descripción del negocio, el
+          contexto, el producto- servicio, Plan Comercial. Plan de Operaciones y Plan
+          Financiero.
+        </p>
+            </div>
+          </li>
+
+          <li>
+            <a data-toggle="collapse" href="#faqcursos3" class="collapsed">Community Manager<i class="ion-android-remove"></i></a>
+            <div id="faqcursos3" class="collapse" data-parent="#faqcursos-list">
+
+              <p>
+
+                <h3>CURSO ON LINE: Gestión de contenidos en redes sociales | Community Manager<h3>
+                <h4>Fecha de inicio:  Miércoles 15 de Abril. 18 hs.</h4>
+
+                <p>
+                  Aprendé a planificar la gestión de las diferentes redes sociales para organizaciones y empresas
+                  En este curso los participantes asimilarán, tanto los conocimientos teóricos, como
+                  las habilidades prácticas de esta profesión, planificando la gestión de las
+                  diferentes redes sociales de organizaciones y empresas.<br/>
+                  Duración: 12 clases on line a través de plataforma WebEX Meeting (duración total por participante: 36 horas).<br/>
+                  Se brindará seguimiento personalizado para que cada participante desarrolle e implemente un caso práctico.
+                </p>
+
+              </p>
+      			  <h4>Temario y actividades:</h4>
+      			  <p>
+                Planificación y gestión de programas de marketing en redes sociales. Creación de
+                estrategias y cronogramas, medición de resultados y definición de acciones
+                necesarias para el logro de objetivos. El rol del Community Manager: informar,
+                comunicar, dinamizar, administrar la comunidad virtual creada y su reputación
+                online, en función de la planificación establecida. Manejar las herramientas y
+                recursos necesarios para la implementación de programas de marketing en Redes
+                Sociales. Perfil de cada Red Social e implementación de anuncios en Facebook,
+                Instagram, otras. Conocimiento de las distintas Apps para planificar publicaciones.
+                Rol de los Influencers. Desarrollo de un caso práctico para cada participante.
+              </p>
+
+
+
+
+            </div>
+          </li>
+
+          <li>
+            <a data-toggle="collapse" href="#faqcursos4" class="collapsed">Alfabetización Digital<i class="ion-android-remove"></i></a>
+            <div id="faqcursos4" class="collapse" data-parent="#faqcursos-list">
+
+              <h3>CURSO ON LINE: Alfabetización Digital | ¡Manejá a tu favor la información, el conocimiento y la tecnología!<h3>
+              <h4>Fecha de inicio:  Martes 21 de Abril. 16 hs.</h4>
+
+              <p>
+                En este curso los participantes aprenderán a ser más productivos y eficientes mediante el uso del conocimiento, la información y la tecnología digital.<br/>
+                12 clases on line a través de plataforma WebEX Meeting (duración total por participante: 36 horas). <br/>
+                Curso modalidad taller.<br/>
+                Se brindará seguimiento personalizado para que cada participante elabore un caso práctico.
+              </p>
+
+            </p>
+            <h4>Temario y actividades:</h4>
+            <p>
+              La sociedad del conocimiento y la información. El rol de la tecnología y la ciudadanía digital. ¿Internet no olvida, ni perdona? Google y su buen uso. Las redes sociales.  Medios digitales y tradicionales: la convergencia digital. Transformación digital y oficios digitales. Economía del Conocimiento, sus oportunidades y riesgos. Grupos y relaciones. Líderes y equipos. Convertir las ideas en proyectos. Testeo de proyectos de los participantes. Caso práctico. Feria de proyectos
+            </p>
+
+
+            </div>
+          </li>
+
+          <li>
+            <a data-toggle="collapse" href="#faqcursos5" class="collapsed">Comercio Electrónico<i class="ion-android-remove"></i></a>
+            <div id="faqcursos5" class="collapse" data-parent="#faqcursos-list">
+              <p>
+
+                <h3>CURSO ON LINE: Comercio Electrónico | Asistente de Ventas en Mercado Libre<h3>
+                <h4>Fecha de inicio:  Miércoles 22 de Abril 18 hs.</h4>
+                <p>
+                  En este curso los participantes aprenderán a desempeñarse como asistentes de
+                  ventas para empresas que vendan sus productos o servicios a través de la
+                  plataforma Mercado Libre.<br/>
+                  12 clases on line a través de plataforma WebEX Meeting (duración total por
+                  participante: 36 horas).<br/>
+                  Se brindará seguimiento personalizado para que cada participante desarrolle e
+                  implemente un caso práctico.
+                </p>
+
+              </p>
+      			  <h4>Temario y actividades:</h4>
+      			  <p>
+                El uso de la plataforma Mercado Libre para obtener mejores resultados en las
+                ventas. Acciones necesarias para la publicación y venta de productos de forma
+                efectiva. Análisis de oportunidades comerciales y optimización de la publicación de
+                productos en base a resultados. ¿Cómo diseñar una estrategia digital integral
+                usando a Mercado Libre como nuestro aliado de negocios? Estrategia de precios
+                para ganarle a la competencia y además ser rentable. El ecosistema de las apps
+                integradas a Mercado Libre y su uso efectivo. Armado de la mezcla de productos y
+                oferta de publicaciones para estar presente en todas las búsquedas
+              </p>
+
+            </div>
+          </li>
+
+        </ul>
+
+      </div>
+    </section>
 
     <!--==========================
       More Features Section
@@ -604,10 +775,11 @@
   <script src="lib/jquery/jquery.animateNumber.min.js"></script>
 
   <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
+  <script src="contactform/contactform2.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 
 </body>
 </html>
+
